// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<InputGroup /> >  deve renderizar no estado sucesso quando isSucess for true 1`] = `
<div
  class="sc-bcPKhP hLFPdp"
>
  <label
    for="name"
  >
    NOME
  </label>
  <input
    class="success"
    id="name"
    type="text"
    value=""
  />
  <span />
</div>
`;

exports[`<InputGroup /> > deve renderizar com erro quando receber uma mensagem de erro 1`] = `
<div
  class="sc-bcPKhP hLFPdp"
>
  <label
    for="name"
  >
    NOME
  </label>
  <input
    class="error"
    id="name"
    type="text"
    value=""
  />
  <span>
    campo obrigatório
  </span>
</div>
`;

exports[`<InputGroup /> > deve renderizar corretamente sem erro ou sucesso 1`] = `
<div
  class="sc-bcPKhP hLFPdp"
>
  <label
    for="name"
  >
    NOME
  </label>
  <input
    class=""
    id="name"
    type="text"
    value=""
  />
  <span />
</div>
`;
